--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header_left">
-            <h1>Ім'я Прізвище</h1>
+            <h1>Зуєв Назар</h1>
             <div class="bio">
                 <p>Тут напиши що-небудь про себе :)</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -40,7 +40,7 @@
             <h1>Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="">
+                    <img src="github_logo.png" alt="https://github.com/NAZarelo">
                 </div>
             </div>
         </section>
