--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="https://github.com/NAZarelo">
+                    <img src="github_logo.png" alt="">
                 </div>
             </div>
         </section>
@@ -54,7 +54,7 @@
                     <img src="tg_logo.svg" alt="">
                 </div>
                 <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                    <img src="email_logo.png" alt="https://github.com/NAZarelo">
                 </div>
             </div>
         </section>
