--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <div class="header_left">
             <h1>Зуєв Назар</h1>
             <div class="bio">
-                <p>Тут напиши що-небудь про себе :)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Вивчаю HTML, CSS, JavaScript</p>
             </div>
         </div>
         <div class="header_right">
@@ -40,7 +39,7 @@
             <h1>Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="">
+                    <img src="github_logo.png" alt="https://github.com/NAZarelo">
                 </div>
             </div>
         </section>
@@ -54,7 +53,7 @@
                     <img src="tg_logo.svg" alt="">
                 </div>
                 <div class="section_item">
-                    <img src="email_logo.png" alt="https://github.com/NAZarelo">
+                    <img src="email_logo.png" alt="">
                 </div>
             </div>
         </section>
