--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
         <div class="header_right">
             <div class="header_btn">
-                <i class="fa-solid fa-chevron-down"></i>
+                <a href="#n"><i class="fa-solid fa-chevron-down"></i></a>
             </div>
         </div>
     </header>
     <main>
         <section class="skills">
-            <h1>Навички</h1>
+            <h1 id="n">Навички</h1>
             <div class="section_row">
                 <div class="section_item">
                     <img src="html_logo.png" alt="">
@@ -39,7 +39,7 @@
             <h1>Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="https://github.com/NAZarelo">
+                    <a href="https://github.com/NAZarelo"><img src="github_logo.png" alt=""></a>
                 </div>
             </div>
         </section>
@@ -47,13 +47,13 @@
             <h1>Контакти</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="Instagram_icon.png.webp" alt="">
+                    <a class="https://www.instagram.com/nazarelo8/?next=%2F"><img src="Instagram_icon.png.webp" alt=""></a>
                 </div>
                 <div class="section_item">
-                    <img src="tg_logo.svg" alt="">
+                    <a href="https://t.me/@nazarelo8"><img src="tg_logo.svg" alt="https://t.me/@nazarelo8"></a>
                 </div>
                 <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                    <a href="mailto:nazarzuyev@gmail.com"><img src="email_logo.png" alt=""></a>
                 </div>
             </div>
         </section>
