--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f77600b8df.js" crossorigin="anonymous"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <header>
@@ -57,11 +58,23 @@
                 </div>
             </div>
         </section>
+        <section class="use">
+            <h1 id="n">Використовую:</h1>
+            <div class="section_row">
+                <div class="section_item">
+                    <img src="github_logo.png" alt="">
+                </div>
+                <div class="section_item">
+                    <img src="vsc_logo.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer_content">
             Створено мною в 2024 | Logika
         </div>
     </footer>
+    <script src='https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js'></script>
 </body>
 </html>
